Add the Misc information section on the right

--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,16 @@
-table {
+table {width: 500px; float: left;}
+
+.Stat {float: right; padding-right: 15px;}
+
+.health {float: right;}
+
+ul {margin: 0; padding: 0; list-style-type: none;}
+
+body {font-size: 75%;}
+
+h1 {margin: 3px}
+
+.miscData {
+    padding-left: 520px;
     width: 500px;
-}
-
-.Stat {
-    float: right;
-    padding-right: 15px;
-}
-
-.health {
-    float: right;
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-body {
-    font-size: 75%;
-}
-
-h1 {
-    margin: 3px
 }
